@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -bug: Change the default behavior of ping.php to mark a host as up if either snmp or ping are successful.
 -bug: Don't allow graph_export to delete your web site.
 -bug: Correct issue where snmp was not returning hex data and some text data.
+-feature: When utilizing cmd.php, don't run the script_server if it is not required for a process.
 -feature: Incorporate snmpbulkwalk binary to user interface to speed snmpv2 & snmpv3 walk calls.
 
 0.8.6g
